--- a/data/fonts/Makefile.am
+++ b/data/fonts/Makefile.am
@@ -10,6 +10,15 @@ dist_install_DATA = \
 	lcd.ttf \
 	md_khmurabi_10.ttf \
 	nmsbd.ttf \
+	analog.ttf \
+	Army_Bold_G.ttf \
+	army-digital.ttf \
+	Army_Regular_L.ttf \
+	ForgottenFuturistShadow.ttf \
+	goodtime.ttf \
+	nmsbd2.ttf \
+	tiny.ttf \
+	titles.ttf \
 	LiberationSans-Bold.ttf \
 	LiberationSans-BoldItalic.ttf \
 	LiberationSans-Italic.ttf \
