--- a/lib/python/Components/Makefile.am
+++ b/lib/python/Components/Makefile.am
@@ -17,7 +17,7 @@ install_PYTHON = \
 	FIFOList.py ServiceEventTracker.py Input.py TimerSanityCheck.py FileList.py \
 	MultiContent.py MediaPlayer.py TunerInfo.py VideoWindow.py ChoiceList.py \
 	Element.py Playlist.py ParentalControl.py \
-	Ipkg.py SelectionList.py Scanner.py SystemInfo.py PackageInfo.py \
+	Ipkg.py SelectionList.py Scanner.py SystemInfo.py \
 	Task.py Console.py ResourceManager.py TuneTest.py \
 	Keyboard.py Sensors.py FanControl.py HdmiCec.py \
 	language_cache.py \
