--- a/lib/python/Tools/Makefile.am
+++ b/lib/python/Tools/Makefile.am
@@ -4,4 +4,5 @@ install_PYTHON = \
 	ASCIItranslit.py Alternatives.py BoundFunction.py CList.py Directories.py \
 	Downloader.py Event.py FuzzyDate.py HardwareInfo.py ISO639.py Import.py \
 	KeyBindings.py LoadPixmap.py Notifications.py NumericalTextInput.py \
-	Profile.py RedirectOutput.py Transponder.py XMLTools.py __init__.py
+	Profile.py RedirectOutput.py Transponder.py XMLTools.py __init__.py \
+	DreamboxHardware.py
